--- a/css-exercises/foundations/06-cascade-fix/style.css
+++ b/css-exercises/foundations/06-cascade-fix/style.css
@@ -3,20 +3,20 @@
   color: hsl(0, 100%, 50%);
 }
 
-.small-para {
-  font-size: 12px;
-}
-
 .para {
   font-size: 22px;
 }
 
-.confirm {
+.para.small-para {
+  font-size: 12px;
+}
+
+#confirm-button {
   background: green;
   color: white;
   font-size: 20px;
   font-weight: bold;
-} 
+}
 
 .button {
   background-color: #ffc0cb;
@@ -24,7 +24,7 @@
   font-size: 20px;
 }
 
-.child {
+.text.child {
   color: red;
   font-size: 14px;
 }
