flex -> exercise 2 completed

--- a/css-exercises/flex/02-flex-header/style.css
+++ b/css-exercises/flex/02-flex-header/style.css
@@ -1,4 +1,20 @@
-.header  {
+.header {
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+/* .logo {
+    margin: auto; /*can also be used to put logo in the center
+} */
+ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 5px;
+}
+/* ================================================= */
+.header {
   font-family: monospace;
   background: papayawhip;
 }
