--- a/css-exercises/flex/03-flex-header-2/style.css
+++ b/css-exercises/flex/03-flex-header-2/style.css
@@ -1,6 +1,29 @@
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+}
+.left-header {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.right-header {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+.links {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+/* ================================================================ */
 /* this is some magical font-importing.  
 you'll learn about it later. */
-@import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap");
 
 body {
   margin: 0;
@@ -11,15 +34,15 @@ body {
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
-  box-shadow: 0 0 8px rgba(0,0,0,.1);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
 
 .profile-image {
   background: rebeccapurple;
-  box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
+  box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.5);
   border-radius: 50%;
   width: 48px;
-  height:  48px;
+  height: 48px;
 }
 
 .logo {
