--- a/css-exercises/flex/04-flex-information/style.css
+++ b/css-exercises/flex/04-flex-information/style.css
@@ -1,5 +1,27 @@
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+/*Alternative to .main*/
+/* .title {
+  text-align: center;
+  margin-bottom: 32px;
+} */
+.plants {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 52px;
+}
+.plant {
+  max-width: 200px;
+  text-align: center;
+}
+/* ==================================================================== */
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
