flex -> exercise 5 completed

--- a/css-exercises/flex/05-flex-modal/style.css
+++ b/css-exercises/flex/05-flex-modal/style.css
@@ -1,6 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+.modal {
+  display: flex;
+  padding: 16px;
+  gap: 16px;
+}
+.icon {
+  flex-shrink: 0;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.top {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: larger;
+}
+/* =================================================================== */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -19,7 +40,7 @@ body {
   background: white;
   width: 480px;
   border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.2);
 }
 
 .icon {
