--- a/css-exercises/flex/06-flex-layout/style.css
+++ b/css-exercises/flex/06-flex-layout/style.css
@@ -1,4 +1,45 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+}
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 16px;
+}
+a {
+  text-decoration: none;
+  color: darkslategray;
+  font-weight: bold;
+}
+a:hover {
+  color: black;
+}
+button {
+  padding: 8px 16px;
+}
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+}
+.footer {
+  background-color: #eee;
+}
+/* =================================================== */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 body {
   height: 100vh;
