--- a/css-exercises/flex/07-flex-layout-2/style.css
+++ b/css-exercises/flex/07-flex-layout-2/style.css
@@ -1,5 +1,55 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex-grow: 1;
+  display: flex;
+}
+.header {
+  font-size: 32px;
+  font-weight: 900;
+  padding-left: 16px;
+  display: flex;
+  align-items: center;
+}
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+li {
+  padding: 8px 0px;
+}
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+.sidebar {
+  flex-shrink: 0;
+  padding: 16px;
+}
+.cards {
+  padding: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+.card {
+  width: 300px;
+  padding: 16px;
+  box-sizing: border-box;
+}
+/* ==================================================== */
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
   min-height: 100vh;
 }
@@ -23,6 +73,6 @@ body {
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
 }
