--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -29,6 +29,9 @@ footer a {
   color: #e5e7eb;
   text-decoration: none;
 }
+header a:hover {
+  color: #3882f6;
+}
 header {
   justify-content: space-between;
   padding: 10px;
@@ -58,11 +61,12 @@ main {
 /* ================================================================== */
 #overview {
   display: flex;
-  gap: 8px;
+  gap: 32px;
   background-color: #1f2937;
   color: #e5e7eb;
   padding-top: 50px;
   padding-bottom: 50px;
+  justify-content: space-between;
 }
 #overview h1 {
   font-weight: bolder;
@@ -72,8 +76,7 @@ main {
   padding: 0;
 }
 #overview p {
-  margin: 0;
-  margin-bottom: 12px;
+  margin: 16px 0px;
   padding: 0;
 }
 #overview button {
@@ -85,12 +88,11 @@ main {
   border: 2px solid #3882f6;
   border-radius: 10px;
 }
-#overview figure {
-  width: 600px;
-  background-color: #f9faf873;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+#overview img {
+  width: 15%;
+  min-width: 150px;
+  height: auto;
+  flex-shrink: 0;
 }
 /* ========================================================================= */
 #info {
@@ -107,18 +109,26 @@ main {
   flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 16px;
+  padding-top: 64px;
 }
 .card {
   width: 200px;
+  transition: width 200ms ease-out;
 }
 .card img {
-  border: 4px solid #3882f6;
-  border-radius: 10px;
-  min-width: 200px;
-  min-height: 200px;
+  width: 100%;
+  height: auto;
 }
 .card figcaption {
   padding: 8px;
+  font-size: 24px;
+  color: #1f2937;
+}
+.card:hover {
+  width: 210px;
+}
+.card a {
+  text-decoration: none;
 }
 /* =========================================================== */
 #quote {
@@ -144,7 +154,7 @@ main {
   align-items: center;
   justify-content: space-around;
   color: #e5e7eb;
-  margin: 80px 100px;
+  margin: 6% 8%;
   padding: 24px;
   border-radius: 16px;
 }
@@ -156,4 +166,5 @@ main {
   padding: 8px 32px;
   border: 2px solid #e5e7eb;
   border-radius: 10px;
+  flex-shrink: 0;
 }
