--- a/etch-a-sketch/style.css
+++ b/etch-a-sketch/style.css
@@ -1,9 +1,92 @@
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+header,
+footer {
+  background-color: #212529;
+  color: white;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+}
+footer {
+  padding: 8px;
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+a:hover {
+  color: lightskyblue;
+}
+h1 {
+  margin: 8px;
+  font-size: 28px;
+}
+main {
+  flex-grow: 1;
+  width: 100%;
+  display: flex;
+}
+#options {
+  background-color: #efefef;
+  width: 300px;
+  padding-left: 8px;
+}
+h2 {
+  text-align: center;
+  text-transform: uppercase;
+  color: royalblue;
+}
+#grid-length {
+  width: 75%;
+}
+.modes {
+  margin: 30px 0;
+  font-size: 20px;
+}
+#color-in {
+  margin-left: 50px;
+  border: none;
+}
+#reset-btn {
+  margin-left: 10%;
+  margin-top: 20px;
+  padding: 10px 20px;
+  width: 75%;
+  border: 3px solid royalblue;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: large;
+}
+#reset-btn:hover {
+  background-color: royalblue;
+  color: white;
+}
+#render {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/*======================================== rendering styles ========================================*/
 .grid {
   display: flex;
   flex-direction: column;
-  width: 480px;
-  height: 480px;
-  border: 5px solid black;
+  width: 512px;
+  height: 512px;
+  border: 2px solid black;
+  box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.75),
+    -10px -5px 5px rgba(0, 0, 0, 0.75);
 }
 .row {
   flex-grow: 1;
