--- a/css-exercises/grid/02-grid-layout-2/style.css
+++ b/css-exercises/grid/02-grid-layout-2/style.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   height: 100%;
   margin: 0;
 }
@@ -20,17 +21,17 @@ body, html {
 }
 
 .header {
-  background-color: #FFDE22;
+  background-color: #ffde22;
   grid-column: 1 / 3;
 }
 
 .sidebar {
-  background-color: #FF7755;
+  background-color: #ff7755;
   grid-row: 2 / 4;
 }
 
 .nav {
-  background-color: #00DDFF;
+  background-color: #00ddff;
 }
 
 .article {
@@ -47,4 +48,11 @@ body, html {
 .footer {
   background-color: #393f4d;
   grid-column: 1 / 3;
+}
+/* ============================= Solution ========================== */
+.container {
+  display: grid;
+  gap: 15px;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
 }
