--- a/admin-dashboard/style.css
+++ b/admin-dashboard/style.css
@@ -1,22 +1,210 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 :root {
-  --side-bg-color: #1a92d4;
-  --side-f-color: white;
-  --header-bg-color: white;
-  --header-f-color: black;
+  --main-bg-color: #fff;
+  --main-f-color: #000;
+  --minor-bg-color: #e2e8f0;
+  --minor-f-color: #444444;
+  --mono-bg-color: #1a92d4;
+  --mono-f-color: #fff;
+  --mono-hv-color: rgba(0, 0, 0, 0.2);
 }
-body {
+* {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  list-style: none;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+h2 {
+  font-size: 21px;
+}
+body {
+  color: var(--main-f-color);
+  background-color: var(--main-bg-color);
+  min-height: 100vh;
   font-family: "Roboto", sans-serif;
   display: grid;
-  grid-template-columns: minmax(min-content, 270px) minmax(70vw, 1fr); /*need some tweaking*/
+  grid-template-columns: minmax(min-content, 250px) 1fr;
   grid-template-rows: auto 1fr;
   grid-template-areas:
     "sidebar header"
     "sidebar content";
 }
+/* ================================ Header =============================== */
+header {
+  grid-area: header;
+  background-color: var(--main-bg-color);
+  color: var(--main-f-color);
+  padding: 25px;
+  display: grid;
+  grid-template-columns: minmax(max-content, 1fr) auto;
+  gap: 10px;
+  place-items: center stretch;
+}
+/* -------------- search-bar ----------------- */
+.search-bar {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 10px;
+  align-items: center;
+}
+.search-bar > input[type="search"] {
+  border-radius: 20px;
+  border: none;
+  background-color: var(--minor-bg-color);
+  padding: 5px 12px;
+}
+/* ----------------- options --------------- */
+.options {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 10px;
+}
+.options .round-image {
+  width: 36px;
+}
+.options > a {
+  font-weight: bold;
+  padding: 8px 10px;
+  border-radius: 20px;
+}
+/* ----------------- actions --------------- */
+.actions {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 10px;
+}
+.actions > button {
+  background-color: var(--mono-bg-color);
+  color: var(--mono-f-color);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 16px;
+}
+/* ================================= Sidebar ============================= */
+aside {
+  grid-area: sidebar;
+  background-color: var(--mono-bg-color);
+  color: var(--mono-f-color);
+}
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin: 25px 15px 40px 10px;
+}
+.logo h1 {
+  font-size: clamp(21px, 3vw, 27px);
+}
+.logo img {
+  width: clamp(28px, 4vw, 48px);
+}
+/* ------------------------------ */
+aside > nav {
+  display: grid;
+  gap: 40px;
+}
+aside > nav li {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  padding: 5px 15px;
+}
+/* ================================ content =============================== */
+main {
+  grid-area: content;
+  background-color: var(--minor-bg-color);
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  gap: 15px;
+  padding: 15px;
+}
+/* ------------------- content ------------------- */
+main h2 {
+  margin-bottom: 10px;
+}
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: 200px;
+  gap: 20px;
+}
+.card {
+  background-color: var(--main-bg-color);
+  border-left: 10px solid var(--mono-bg-color);
+  border-radius: 10px;
+  padding: 15px;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  gap: 3px;
+}
+.card-buttons {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 10px;
+}
+.card p {
+  color: var(--minor-f-color);
+}
+/* ---------------- side-content ----------------- */
+.side-content {
+  display: grid;
+  gap: 40px;
+  grid-auto-rows: min-content;
+}
+.side-content h3 {
+  font-size: 18px;
+}
+/* ---------- announcements ------- */
+.announcements li:not(:first-child) {
+  border-top: 2px solid var(--minor-f-color);
+  padding-top: 15px;
+}
+.announcements li p {
+  color: var(--minor-f-color);
+}
+/* ---------- trending ------- */
+.trending .user-layout {
+  grid-template-columns: minmax(36px, 60px) 1fr;
+  font-size: 16px;
+  gap: 5px 10px;
+}
+.trending .ul-bot-text {
+  color: var(--minor-f-color);
+}
+/*============================= General =========================*/
+.side-card {
+  background-color: var(--main-bg-color);
+  color: var(--main-f-color);
+  border-radius: 10px;
+  padding: 25px;
+  display: grid;
+  gap: 15px;
+}
+/* ---------------------------------- */
+.user-layout {
+  display: grid;
+  grid-template-columns: minmax(60px, 80px) 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 5px 15px;
+}
+.user-layout > img {
+  grid-row: 1 / span 2;
+  width: 100%;
+  align-self: center;
+}
+.user-layout .ul-top-text {
+  align-self: end;
+}
+.user-layout .ul-bot-text {
+  align-self: start;
+}
+/* --------------------- no-scroller --------------------- */
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scroller::-webkit-scrollbar {
   display: none;
@@ -27,66 +215,52 @@ body {
   scrollbar-width: none; /* Firefox */
   overflow: auto;
 }
+/*------------------------ text overflow --------------------*/
+.overflow {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
+/* ---------------------- SVG Filters --------------------- */
 .white-filter {
   filter: invert(100%);
 }
-/* ================================ Header =============================== */
-header {
-  grid-area: header;
-  background-color: var(--header-bg-color);
-  color: var(--header-f-color);
-  padding: 25px;
-  display: grid;
-  grid-template-columns: minmax(max-content, 1fr) auto;
-  gap: 10px;
-  place-items: center stretch;
+/* ----------------------- round-image ------------------- */
+.round-image {
+  background-color: var(--mono-bg-color);
+  border-radius: 50%;
 }
-/* ================================= Sidebar ============================= */
-aside {
-  grid-area: sidebar;
-  background-color: var(--side-bg-color);
-  color: var(--side-f-color);
+/*======================= Media query trial ==========================*/
+@media (max-width: 916px) {
+  body {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas: "header" "content" "sidebar";
+  }
+  aside > nav {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .logo {
+    justify-content: center;
+  }
 }
-.logo {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  margin: 25px 15px 40px 10px;
+
+/* -------------------------------------------------------------- */
+input[type="image"]:not(.round-image) {
+  border-radius: 50%;
+  padding: 5px;
 }
-.logo h1 {
-  margin: 0;
-  padding: 0;
-  font-size: clamp(21px, 3vw, 27px);
+aside > nav li:active,
+button:active,
+.options a:active,
+input[type="image"]:active {
+  transform: scale(0.92);
 }
-.logo img {
-  width: clamp(28px, 4vw, 48px);
-}
-/* ------------------------------ */
-aside > nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-aside > nav {
-  display: grid;
-  gap: 40px;
-}
-aside > nav a {
-  color: inherit;
-  text-decoration: none;
-}
-aside > nav li {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  padding: 5px 15px;
-}
-aside > nav li:hover {
-  background-color: rgba(0, 0, 0, 0.3);
+aside > nav li:hover,
+button:hover,
+.options > a:hover,
+input[type="image"]:hover {
+  background-image: linear-gradient(var(--mono-hv-color), var(--mono-hv-color));
   cursor: pointer;
-}
-/* ================================ content =============================== */
-main {
-  background-color: green;
-  grid-area: content;
 }
