--- a/restaurant/src/app/components/footer/style.css
+++ b/restaurant/src/app/components/footer/style.css
@@ -4,16 +4,22 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  padding: 10px;
+  gap: var(--small-gap);
+  padding: var(--small-gap);
 }
 .social-links {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: var(--small-gap);
   font-size: 1.2rem;
 }
 .social-icon:hover {
   color: var(--tone-f-color);
+}
+
+@media screen and (max-width: 480px) {
+  footer {
+    flex-direction: column;
+  }
 }
