--- a/restaurant/src/app/pages/main.css
+++ b/restaurant/src/app/pages/main.css
@@ -1,4 +1,21 @@
 .page {
-  padding: 5% 15%;
+  padding: var(--large-gap) max(var(--gap), calc((100vw - 480px) * 0.15));
   min-height: 100%;
+}
+
+.page-container {
+  background-color: var(--tone-bg-color);
+  padding: var(--large-gap);
+  border-radius: var(--large-rad);
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
+  overflow: hidden;
+}
+
+@media screen and (max-width: 480px) {
+  .page-container {
+    padding: var(--large-gap) var(--gap);
+    border-radius: var(--rad);
+  }
 }
