--- a/restaurant/src/app/pages/contact/style.css
+++ b/restaurant/src/app/pages/contact/style.css
@@ -1,15 +1,7 @@
-.info-list {
-  background-color: var(--tone-bg-color);
-  padding: 50px;
-  border-radius: 25px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
 .g-map {
-  border: 4px solid var(--tone-f-color);
-  border-radius: 4px;
-  height: 400px;
+  border: var(--small-rad) solid var(--tone-f-color);
+  border-radius: var(--small-rad);
+  height: max(17rem, 40vw);
   width: 100%;
 }
 .gmap_canvas {
