--- a/restaurant/src/app/pages/menu/style.css
+++ b/restaurant/src/app/pages/menu/style.css
@@ -1,8 +1,3 @@
-.menu-list {
-  background-color: var(--tone-bg-color);
-  padding: 50px;
-  border-radius: 25px;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
+.menu-container {
+  gap: var(--large-gap);
 }
