--- a/restaurant/src/styles/main.css
+++ b/restaurant/src/styles/main.css
@@ -14,6 +14,15 @@ font-family: 'Sansita Swashed', cursive;
   --tone-bg-color: #ff444447;
   --tone-f-color: #ed1250;
   --minor-color: #ffa500;
+
+  --small-gap: 0.6rem;
+  --gap: 1.2rem;
+  --large-gap: 2.8rem;
+
+  --small-rad: 0.28rem;
+  --rad: 0.6rem;
+  --large-rad: 1.4rem;
+
   scroll-behavior: smooth;
 }
 
