initial design phase completed

--- a/todo/src/styles/main.css
+++ b/todo/src/styles/main.css
@@ -5,6 +5,7 @@
 @import url(./layout.css);
 @import url(./header.css);
 @import url(./sidebar.css);
+@import url(./content.css);
 @import url(./footer.css);
 
 :root {
